[B]Version 1.0.4[/B]

- Add Cogeco MSO support.

[B]Version 1.0.3[/B]

- Fix guide data crash (thanks to portse) 
- Fix timezones outside of GMT-5
- Fix folder structure

[B]Version 1.0.2[/B]

- Add support for Telus
- Fix unicode encoding/decoding bugs

[B]Version 1.0.1[/B]

- Add support for Shaw Go
- Improved error handling
- Pull channel IDs from the API config instead of hard coding
- Add program information

[B]Version 1.0.0[/B]

- Initial revision. Plays Sportsnet live streams.