@@ -1,3 +1,7 @@
+[B]Version 1.0.5[/B]
+
+- Add MSO independant Sportsnet authentication.
+
 [B]Version 1.0.4[/B]
 
 - Add Cogeco MSO support.
